authz/deployments/kubernetes-manifests/authz.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authz
  template:
    metadata:
      labels:
        app: authz
    spec:
      volumes:
        - name: authz-postgresdb-storage
          persistentVolumeClaim:
            claimName: authz-pvc
      containers:
        - image: postgres:9.6.3
          name: my-database
          ports:
          - containerPort: 5432
          resources: {}
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data:Z"
            name: authz-postgresdb-storage        
        - name: authz
          image: index.docker.io/cage1016/gokit-istio-security-authz
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authz
spec:
  hosts:
    - authz
  http:
    - route:
        - destination:
            host: authz
---
kind: Service
apiVersion: v1
metadata:
  name: authz
spec:
  selector:
    app: authz
  ports:
    - port: 80
      name: http
      targetPort: 10120
    - port: 8000
      name: grpc
      targetPort: 10121
---
apiVersion: v1
kind: Service
metadata:
  name: authz-external
  labels:
    app: authz
spec:
  type: LoadBalancer
  selector:
    app: authz
  ports:
  - port: 7170
    name: http
    targetPort: 10120
  - port: 7171
    name: grpc
    targetPort: 10121
